# esign

./: .gitignore  PRD.md  PROMPT.md  RALPH-INIT.md  README.md  forge.config.js  package-lock.json  package.json  progress.md  tasks.json
.github/workflows/: release.yml
.serena/: project.yml
assets/fonts/: download-fonts.js  download-fonts.sh
backend/: .env.example  DEPLOYMENT.md  deploy.sh  freesign-api.service  nginx-freesign.conf  package-lock.json  package.json  schema.sql  server.js  setup-postgres.sh
backend/public/: index.html
backend/public/css/: style.css
backend/public/js/: app.js
backend/scripts/: init-db.js  migrate-email-verification.sql  setup-stripe.js
main/: ipc-handlers.js  main.js  preload.js
main/lib/: font-loader.js  pdf-signer.js  signature-renderer.js
renderer/: index.html
renderer/css/: style.css
renderer/js/: app.js  pdf-viewer.js  pdfjs-init.mjs  placement.js  signature-panel.js  text-panel.js
site/: index.html  sitemap.xml  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
test/: e2e-test.sh  test-sign.js
test/fixtures/: generate-pdfs.js
web/: index.html
web/js/: app.js  placement.js  signature-panel.js
web/public/: about.html  index.html
web/public/css/: style.css
web/public/js/: app.js  signature-panel.js
