[package]
name = "esign"
version = "1.0.0"
description = "Free open-source desktop application for signing PDFs"
authors = []
license = "MIT"
repository = ""
default-run = "esign"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "esign_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
